--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>com.redhat.patriot.smarthome_gateway_sim.Main</mainClass>
+                    <mainClass>com.redhat.patriot.smarthome_gateway.Main</mainClass>
                     <cleanupDaemonThreads>false</cleanupDaemonThreads>
                 </configuration>
             </plugin>
